--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -27,6 +27,7 @@
     <title>El Gobierno Vasco y los medios</title>
   </head>
   <body>
+    <main>Kaixo, mundua!</main>
     <x-search></x-search>
     <x-switch></x-switch>
   </body>
