Añade el logo componentizado y una clase para componentizar

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -27,7 +27,10 @@
     <title>El Gobierno Vasco y los medios</title>
   </head>
   <body>
-    <main>Kaixo, mundua!</main>
+    <main>
+      <x-logo></x-logo>
+    </main>
+
     <x-search></x-search>
     <x-switch></x-switch>
   </body>
