--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -27,11 +27,11 @@
     <title>El Gobierno Vasco y los medios</title>
   </head>
   <body>
+    <header>
+      <x-search></x-search>
+    </header>
     <main>
-      <x-logo></x-logo>
+      <!-- <x-logo></x-logo> -->
     </main>
-
-    <x-search></x-search>
-    <x-switch></x-switch>
   </body>
 </html>
