Carga pequeños avances surtidos

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -33,5 +33,15 @@
     <main>
       <!-- <x-logo></x-logo> -->
     </main>
+    <footer>
+      <h1>
+        Explora cómo se reparte el dinero público entre los medios de
+        comunicación del País Vasco
+      </h1>
+      <h1>
+        Un análisis de las campañas de publicidad y comunicación institucional.
+      </h1>
+      <p>Un trabajo de Jaime Gómez-Obregón.</p>
+    </footer>
   </body>
 </html>
