Avanza notablemente en el diseño

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -28,20 +28,30 @@
   </head>
   <body>
     <header>
-      <x-search></x-search>
+      <x-logo></x-logo>
+      <h1>
+        Explora
+        <em>cómo&nbsp;se&nbsp;reparte&nbsp;el&nbsp;dinero&nbsp;público</em>
+        entre los medios de comunicación del País Vasco
+      </h1>
+
+      <hr />
+
+      <h2>
+        <p>
+          Un análisis de <span id="counter">1297</span> campañas de publicidad y
+          comunicación&nbsp;institucional en el período 2018-2022.
+        </p>
+      </h2>
+
+      <p>
+        Por
+        <a href="https://twitter.com/JaimeObregon"
+          >Jaime&nbsp;Gómez&NoBreak;-&NoBreak;Obregón</a
+        >.
+      </p>
     </header>
-    <main>
-      <!-- <x-logo></x-logo> -->
-    </main>
-    <footer>
-      <h1>
-        Explora cómo se reparte el dinero público entre los medios de
-        comunicación del País Vasco
-      </h1>
-      <h1>
-        Un análisis de las campañas de publicidad y comunicación institucional.
-      </h1>
-      <p>Un trabajo de Jaime Gómez-Obregón.</p>
-    </footer>
+    <x-search></x-search>
+    <main></main>
   </body>
 </html>
