Sube mis avances del último par de días

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -53,5 +53,294 @@
     </header>
     <x-search></x-search>
     <main></main>
+    <footer>
+      <h1>Sobre ti y tu batalla</h1>
+
+      <x-details>
+        <div slot="summary">
+          ¿Quién eres tú y quién te ha dado vela en este entierro?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">Hacer esto cuesta dinero, ¿quién te financia?</div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">¿Haces esto para atacar al Gobierno Vasco?</div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Cómo puedo apoyarte para que sigas haciendo herramientas como esta?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <h1>Sobre los datos</h1>
+
+      <x-details>
+        <div slot="summary">
+          ¿Cuál es la fuente última de todos estos datos?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Cómo de exactas son todos estos datos? ¿Qué confiabilidad tienen?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Puedo descargarme los datos que tú has trabajado para trabajarlos yo
+          de otra manera?
+        </div>
+        <div slot="contents">
+          <p>¡Por supuesto! Aquí tienes…</p>
+          <ol>
+            <li>
+              <p>
+                <a href="/data/campaigns.json">El conjunto de datos completo</a
+                >, en formato <abbr>JSON</abbr>.
+              </p>
+            </li>
+            <li>
+              <p>
+                <a
+                  href="https://github.com/JaimeObregon/gobiernovasco.marketing/"
+                  >El programa que escribí</a
+                >
+                para interpretarlos, publicado en GitHub como
+                <i>software</i> libre.
+              </p>
+            </li>
+          </ol>
+        </div>
+      </x-details>
+
+      <h1>Sobre esta herramienta</h1>
+
+      <x-details>
+        <div slot="summary">
+          ¿Es posible descargar el código fuente de esta herramienta para
+          auditarla?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">¿Esta herramienta es <i>software</i> libre?</div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué hay algunas pocas campañas sin cifras económicas?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">¿Has pensado en añadir tal o cual mejora?</div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Qué me da esta herramienta que no me da las memorias originales del
+          Gobierno Vasco
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¡Me encanta! ¿Puedes hacerlo también en mi provincia?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <h1>Sobre el gasto del Gobierno en publicidad</h1>
+
+      <x-details>
+        <div slot="summary">
+          Pero el reparto será proporcional a la audiencia o la tirada de los
+          medios, ¿no?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¡He visto varias campañas absurdas! ¿Se están dilapidando los fondos
+          públicos?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Hay chanchullos y corruptelas en el reparto de estos fondos públicos?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <h1>Otras cosas</h1>
+      <!-- -->
+
+      <x-details>
+        <div slot="summary">
+          ¿Cómo lo has hecho? ¿Cuál es el <i>making of</i>?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué has hecho esto? Y, ¿por qué el País Vasco?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Quién eres tú y quién te ha dado vela en este entierro?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">¿Está disponible el proyecto en lengua vasca?</div>
+        <div slot="contents">
+          <p>Soy ocho apellidos cántabros</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Qué impacto, reacciones o consecuencias está habiendo?
+        </div>
+        <div slot="contents">
+          <p>
+            Ha respondido un parlamentario. Ha provocado una pregunta al
+            Gobierno.
+          </p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Puedo tomar estos datos y estudiarlos más a fondo?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          Soy un periodista y quiero indagar más sobre este reparto, ¿puedes
+          ayudarme?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Qué problema hay con las memorias <abbr>PDF</abbr> que publica el
+          Gobierno Vasco?
+        </div>
+        <div slot="contents">
+          <p>
+            Que son difícilmente accesibles, no están estructuradas y contienen
+            numerosos errores.
+          </p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          He encontrado un error o quiero proponer una mejora, ¿cómo puedo
+          contactarte?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué crees que el gobierno publica los datos de esta forma tan
+          poco eficaz?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué no aparecen agregados todos los medios según el grupo
+          empresarial al que pertenecen?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué en algunas campañas aparecen repetidos varias veces el mismo
+          medio?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+    </footer>
   </body>
 </html>
