Sube algunos de los avances de ayer

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -101,7 +101,7 @@
 
       <x-details>
         <div slot="summary">
-          ¿Cómo de exactas son todos estos datos? ¿Qué confiabilidad tienen?
+          ¿Cómo de exactos son todos estos datos? ¿Qué confiabilidad tienen?
         </div>
         <div slot="contents">
           <p>…</p>
