Responde a algunas preguntas del FAQ

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -54,28 +54,164 @@
     <x-search></x-search>
     <main></main>
     <footer>
-      <h1>Sobre ti y tu batalla</h1>
+      <h1>Mi pelea y yo</h1>
 
       <x-details>
         <div slot="summary">
           ¿Quién eres tú y quién te ha dado vela en este entierro?
         </div>
         <div slot="contents">
-          <p>…</p>
+          <p>
+            ¡Hola! Me llamo <strong>Jaime Gómez-Obregón</strong>, y soy el autor
+            de esta herramienta <cite>gobiernovasco.marketing</cite>. Soy quien
+            ha extraído todos los datos que contiene, ha diseñado el producto
+            digital y lo ha programado.
+          </p>
+
+          <p>
+            Si quieres saber un poco más sobre mí o mi trabajo, puedes echar un
+            vistazo a
+            <a
+              href="https://es.wikipedia.org/wiki/Jaime_G%C3%B3mez-Obreg%C3%B3n"
+              >esta entrada en Wikipedia</a
+            >, a
+            <a href="https://twitter.com/jaimeobregon">mi cuenta de Twitter</a>,
+            a
+            <a href="https://jaime.gomezobregon.com">mi sitio web personal</a>
+            (pendiente de renovación…), a mis proyectos
+            <a href="https://contratosdecantabria.es"
+              ><cite>contratosdecantabria.es</cite></a
+            >, <a href="https://ladonacion.es"><cite>La donación</cite></a
+            >, <a href="https://retrogipuzkoa.com"><cite>Retrogipuzkoa</cite></a
+            >… O, simplemente, en tu buscador favorito de internet. 🙃
+          </p>
+
+          <p>
+            Pero, en resumen, trabajo voluntariamente para que haya más
+            transparencia política en España —en especial, en la contratación
+            pública— y menos corrupción y chanchullos con lo que es de todos.
+          </p>
+
+          <p>
+            Es por ello que me he metido en este follón de extraer, ordenar y
+            publicar todos los datos que he encontrado sobre
+            <strong
+              >publicidad institucional y comunicación del Gobierno
+              Vasco</strong
+            >. Por un lado, porque está perfectamente alineado con mis intereses
+            y actividad. Y, por otro; porque ha supuesto un reto técnico y
+            personal, y a mi <em>me chiflan</em> estas cosas. 🤓
+          </p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué has hecho esto? Y, ¿por qué el País Vasco?
+        </div>
+        <div slot="contents">
+          <p>
+            Esta herramienta se llama <cite>gobiernovasco.marketing</cite>, y la
+            he construido porque el Gobierno Vasco no es del todo transparente
+            con cómo se reparte el dinero público entre los medios de
+            comunicación en las campañas institucionales.
+          </p>
+
+          <p>
+            Ciertamente está la Ley 6/2010 de 23 de diciembre, de Publicidad y
+            Comunicación Institucional de Euskadi, por la que la Comisión
+            Interdepartamental de Publicidad del Gobierno Vasco remite una
+            memoria anual al Parlamento Vasco antes de que finalice el primer
+            periodo de sesiones en la Cámara. Esto suele ser en primavera.
+          </p>
+
+          <p>
+            ¡Pero dichas memorias son un ladrillo del cual es muy difícil
+            extraer datos significativos! Porque las elaboran como extensos
+            documentos <abbr>PDF</abbr> que suelen rondar las 200 páginas. Y
+            estas memorias no son más que una retahíla de campañas e inversiones
+            en medios de la que es <i>misión imposible</i> extraer información
+            agregada, comparativas útiles o cifras totales por medio.
+          </p>
+
+          <p>
+            La mencionada ley de 2010 es positiva en el sentido de que obliga a
+            un mínimo de transparencia —que el Ejecutivo vasco remita la
+            información al Parlamento—, pero se lleva a cabo de una forma muy
+            limitada: en el limitado formato mencionado, solo una vez al año,
+            con un desfase de unos cuatro meses… ¡<a
+              href="https://twitter.com/JaimeObregon/status/1655617166182428673"
+              >y</a
+            >
+            <a
+              href="https://twitter.com/JaimeObregon/status/1656082411443175430"
+              >con</a
+            >
+            <a
+              href="https://twitter.com/JaimeObregon/status/1655173725627596801"
+              >numerosos</a
+            >
+            errores de
+            <a
+              href="https://twitter.com/JaimeObregon/status/1657895174071042050"
+              >todo</a
+            >
+            <a
+              href="https://twitter.com/JaimeObregon/status/1656215497493590016"
+              >tipo</a
+            >!
+          </p>
+
+          <p>
+            Como programador experimentado con una <em>parafilia</em> por la
+            transparencia, me ha parecido un reto muy excitante organizar todo
+            ese lío, obtener información en claro y ponerla a disposición de
+            toda la ciudadanía. Y cuando he pensado que, además, esto podría
+            incomodar a algún político, he pensado…
+            <q>¡Sujétame el cubata…!</q>. 😜
+          </p>
         </div>
       </x-details>
 
       <x-details>
         <div slot="summary">Hacer esto cuesta dinero, ¿quién te financia?</div>
         <div slot="contents">
-          <p>…</p>
+          <p>
+            Efectivamente, he invertido varios cientos de horas de trabajo
+            solitario en este proyecto. ¿Y de qué vivo mientras tanto? ¿Quién lo
+            ha financiado? Todo ha sido posible única y exclusivamente gracias
+            al patrocinio voluntario de un grupo de ciudadanos anónimos y
+            también comprometidos con la transparencia y con que nuestro país
+            funcione mejor.
+            <a href="https://www.patreon.com/jaime_gomez_obregon"
+              >Son mis patronos</a
+            >, y te invito a sumarte si este proyecto te resulta útil y quieres
+            apoyar el siguiente. 🙏
+          </p>
         </div>
       </x-details>
 
       <x-details>
-        <div slot="summary">¿Haces esto para atacar al Gobierno Vasco?</div>
+        <div slot="summary">
+          ¿Haces esto para atacar al Gobierno Vasco o a sus partidos?
+        </div>
         <div slot="contents">
-          <p>…</p>
+          <p>
+            ¡En absoluto! No tengo nada en contra —ni tampoco a favor— del
+            Gobierno Vasco o de los partidos que lo configuran.
+            <strong>Yo ni siquiera soy vasco</strong>, ni resido en el País
+            Vasco.
+          </p>
+
+          <p>
+            No me mueven ideologías partidistas ni banderas. Me motiva el deseo
+            de una mayor transparencia en los asuntos públicos, una buena dosis
+            de reto personal y —no voy a ocultarlo— el puntillo gamberro de que
+            esto pueda incomodar a algún político. Pero no tengo interés en los
+            partidos y yo ni siquiera sigo la política ni consumo medios de
+            comunicación. No digo que ambas cosas no sean útiles; solo expreso
+            que a mí personalmente no me interesan.
+          </p>
         </div>
       </x-details>
 
@@ -84,15 +220,36 @@
           ¿Cómo puedo apoyarte para que sigas haciendo herramientas como esta?
         </div>
         <div slot="contents">
+          <p><a href="https://www.patreon.com/jaime_gomez_obregon">…</a></p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          He encontrado un error o quiero proponer una mejora, ¿cómo puedo
+          contactarte?
+        </div>
+        <div slot="contents">
           <p>…</p>
         </div>
       </x-details>
 
-      <h1>Sobre los datos</h1>
+      <x-details>
+        <div slot="summary">
+          Soy un periodista y quiero indagar más sobre este reparto, ¿puedes
+          ayudarme?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <h1>Los datos</h1>
 
       <x-details>
         <div slot="summary">
-          ¿Cuál es la fuente última de todos estos datos?
+          ¿Cuál es la fuente última de todos estos datos y cómo puedo acceder a
+          ella?
         </div>
         <div slot="contents">
           <p>…</p>
@@ -136,7 +293,39 @@
         </div>
       </x-details>
 
-      <h1>Sobre esta herramienta</h1>
+      <x-details>
+        <div slot="summary">
+          ¿Puedo tomar estos datos y estudiarlos más a fondo?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Qué problema hay con las memorias <abbr>PDF</abbr> que publica el
+          Gobierno Vasco?
+        </div>
+        <div slot="contents">
+          <p>
+            Que son difícilmente accesibles, no están estructuradas y contienen
+            numerosos errores.
+          </p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué crees que el gobierno publica los datos de esta forma tan
+          poco eficaz?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <h1>Esta herramienta</h1>
 
       <x-details>
         <div slot="summary">
@@ -190,7 +379,56 @@
         </div>
       </x-details>
 
-      <h1>Sobre el gasto del Gobierno en publicidad</h1>
+      <x-details>
+        <div slot="summary">
+          ¿Cómo lo has hecho? ¿Cuál es el <i>making of</i>?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">¿Está disponible el proyecto en lengua vasca?</div>
+        <div slot="contents">
+          <p>Soy ocho apellidos cántabros</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué en algunas campañas aparecen repetidos varias veces el mismo
+          medio?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Por qué no aparecen agregados todos los medios según el grupo
+          empresarial al que pertenecen?
+        </div>
+        <div slot="contents">
+          <p>…</p>
+        </div>
+      </x-details>
+
+      <x-details>
+        <div slot="summary">
+          ¿Qué impacto, reacciones o consecuencias está teniendo esta
+          herramienta?
+        </div>
+        <div slot="contents">
+          <p>
+            Ha respondido un parlamentario. Ha provocado una pregunta al
+            Gobierno.
+          </p>
+        </div>
+      </x-details>
+
+      <h1>Las campañas del Gobierno</h1>
 
       <x-details>
         <div slot="summary">
@@ -218,126 +456,9 @@
         </div>
         <div slot="contents">
           <p>…</p>
-        </div>
-      </x-details>
-
-      <h1>Otras cosas</h1>
-      <!-- -->
-
-      <x-details>
-        <div slot="summary">
-          ¿Cómo lo has hecho? ¿Cuál es el <i>making of</i>?
-        </div>
-        <div slot="contents">
           <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Por qué has hecho esto? Y, ¿por qué el País Vasco?
-        </div>
-        <div slot="contents">
           <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Quién eres tú y quién te ha dado vela en este entierro?
-        </div>
-        <div slot="contents">
           <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">¿Está disponible el proyecto en lengua vasca?</div>
-        <div slot="contents">
-          <p>Soy ocho apellidos cántabros</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Qué impacto, reacciones o consecuencias está habiendo?
-        </div>
-        <div slot="contents">
-          <p>
-            Ha respondido un parlamentario. Ha provocado una pregunta al
-            Gobierno.
-          </p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Puedo tomar estos datos y estudiarlos más a fondo?
-        </div>
-        <div slot="contents">
-          <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          Soy un periodista y quiero indagar más sobre este reparto, ¿puedes
-          ayudarme?
-        </div>
-        <div slot="contents">
-          <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Qué problema hay con las memorias <abbr>PDF</abbr> que publica el
-          Gobierno Vasco?
-        </div>
-        <div slot="contents">
-          <p>
-            Que son difícilmente accesibles, no están estructuradas y contienen
-            numerosos errores.
-          </p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          He encontrado un error o quiero proponer una mejora, ¿cómo puedo
-          contactarte?
-        </div>
-        <div slot="contents">
-          <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Por qué crees que el gobierno publica los datos de esta forma tan
-          poco eficaz?
-        </div>
-        <div slot="contents">
-          <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Por qué no aparecen agregados todos los medios según el grupo
-          empresarial al que pertenecen?
-        </div>
-        <div slot="contents">
-          <p>…</p>
-        </div>
-      </x-details>
-
-      <x-details>
-        <div slot="summary">
-          ¿Por qué en algunas campañas aparecen repetidos varias veces el mismo
-          medio?
-        </div>
-        <div slot="contents">
           <p>…</p>
         </div>
       </x-details>
