Pone en castellano alguna URL pública

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -411,7 +411,7 @@
           <p>
             ¡Por supuesto! Aquí tienes
 
-            <a href="/data/campaigns.json">El conjunto de datos completo</a>,
+            <a href="/datos/campañas.json">El conjunto de datos completo</a>,
             estructurado en forma <abbr>JSON</abbr>.
           </p>
 
