Carga algunos cambios recientes

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -35,7 +35,7 @@
         entre los medios de comunicación del País Vasco
       </h1>
 
-      <hr />
+      <x-separator></x-separator>
 
       <h2>
         <p>
