--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -5,13 +5,13 @@
     <meta name="author" content="Jaime Gómez-Obregón" />
     <meta
       name="description"
-      content="Explora cómo se reparte el dinero público a los medios de comunicación en el País Vasco."
+      content="Explora cómo se reparte el dinero público entre los medios de comunicación en el País Vasco."
     />
 
     <meta property="og:title" content="El Gobierno Vasco y los medios" />
     <meta
       property="og:description"
-      content="Explora cómo se reparte el dinero público a los medios de comunicación en el País Vasco."
+      content="Explora cómo se reparte el dinero público entre los medios de comunicación en el País Vasco."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gobiernovasco.marketing" />
@@ -32,7 +32,7 @@
       <h1>
         Explora
         <em>cómo&nbsp;se&nbsp;reparte&nbsp;el&nbsp;dinero&nbsp;público</em>
-        entre los medios de comunicación del País Vasco
+        entre los medios de comunicación en el País&nbsp;Vasco
       </h1>
 
       <x-separator></x-separator>
@@ -40,7 +40,7 @@
       <h2>
         <p>
           Un análisis de <span id="counter">1297</span> campañas de publicidad y
-          comunicación&nbsp;institucional en el período 2018-2022.
+          comunicación&nbsp;institucional en el período 2018-2022
         </p>
       </h2>
 
@@ -48,7 +48,7 @@
         Por
         <a href="https://twitter.com/JaimeObregon"
           >Jaime&nbsp;Gómez&NoBreak;-&NoBreak;Obregón</a
-        >.
+        >
       </p>
     </header>
     <x-search></x-search>
@@ -451,50 +451,32 @@
           <ol>
             <li>
               <a href="/documentos/planes/2018.pdf"
-                ><cite
-                  >Plan de Publicidad y Comunicación Institucional del Gobierno
-                  Vasco 2018.</cite
-                ></a
+                ><cite>Plan de 2018.</cite></a
               >
             </li>
             <li>
               <a href="/documentos/planes/2019.pdf"
-                ><cite
-                  >Plan de Publicidad y Comunicación Institucional del Gobierno
-                  Vasco 2019.</cite
-                ></a
+                ><cite>Plan de 2019.</cite></a
               >
             </li>
             <li>
               <a href="/documentos/planes/2020.pdf"
-                ><cite
-                  >Plan de Publicidad y Comunicación Institucional del Gobierno
-                  Vasco 2020.</cite
-                ></a
+                ><cite>Plan de 2020.</cite></a
               >
             </li>
             <li>
               <a href="/documentos/planes/2021.pdf"
-                ><cite
-                  >Plan de Publicidad y Comunicación Institucional del Gobierno
-                  Vasco 2021.</cite
-                ></a
+                ><cite>Plan de 2021.</cite></a
               >
             </li>
             <li>
               <a href="/documentos/planes/2022.pdf"
-                ><cite
-                  >Plan de Publicidad y Comunicación Institucional del Gobierno
-                  Vasco 2022.</cite
-                ></a
+                ><cite>Plan de 2022.</cite></a
               >
             </li>
             <li>
               <a href="/documentos/planes/2023.pdf"
-                ><cite
-                  >Plan de Publicidad y Comunicación Institucional del Gobierno
-                  Vasco 2023.</cite
-                ></a
+                ><cite>Plan de 2023.</cite></a
               >
             </li>
           </ol>
@@ -648,6 +630,17 @@
             No, aunque me hubiera gustado. La razón principal es que yo soy
             <i>ocho apellidos cántabros</i> y no hablo euskera.
           </p>
+
+          <video controls preload="metadata">
+            <source src="/assets/video.mp4" type="video/mp4" />
+            <track
+              label="Español"
+              kind="subtitles"
+              srclang="es"
+              src="/assets/spanish.vtt"
+              default
+            />
+          </video>
         </div>
       </x-details>
 
