Reorganiza y limpia algunos ficheros

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -632,12 +632,12 @@
           </p>
 
           <video controls preload="metadata">
-            <source src="/assets/video.mp4" type="video/mp4" />
+            <source src="/video/original.mp4" type="video/mp4" />
             <track
               label="Español"
               kind="subtitles"
               srclang="es"
-              src="/assets/spanish.vtt"
+              src="/video/spanish.vtt"
               default
             />
           </video>
