Carga un par de ajustes

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -5,13 +5,13 @@
     <meta name="author" content="Jaime Gómez-Obregón" />
     <meta
       name="description"
-      content="Explora cómo se reparte el dinero público entre los medios de comunicación en el País Vasco."
+      content="Explora cómo se reparte el dinero público a los medios de comunicación en el País Vasco."
     />
 
     <meta property="og:title" content="El Gobierno Vasco y los medios" />
     <meta
       property="og:description"
-      content="Explora cómo se reparte el dinero público entre los medios de comunicación en el País Vasco."
+      content="Explora cómo se reparte el dinero público a los medios de comunicación en el País Vasco."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gobiernovasco.marketing" />
@@ -32,7 +32,7 @@
       <h1>
         Explora
         <em>cómo&nbsp;se&nbsp;reparte&nbsp;el&nbsp;dinero&nbsp;público</em>
-        entre los medios de comunicación en el País&nbsp;Vasco
+        a los medios&nbsp;de&nbsp;comunicación en&nbsp;el País&nbsp;Vasco
       </h1>
 
       <x-separator></x-separator>
@@ -40,7 +40,8 @@
       <h2>
         <p>
           Un análisis de <span id="counter">1351</span> campañas de publicidad y
-          comunicación&nbsp;institucional en el período 2018-2022
+          comunicación&nbsp;institucional en el período
+          2018&NoBreak;-&NoBreak;2022
         </p>
       </h2>
 
