Tunea los textos que acompañan al sitio web

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -202,7 +202,22 @@
             un vistazo decidí darlo por imposible, pero en septiembre volví
             sobre el reto y comencé esta herramienta
             <cite>gobiernovasco.marketing</cite>, que finalmente ve la luz en
-            julio de 2022.
+            julio de 2023.
+          </p>
+
+          <p>
+            Mientras voy trabajando estos datos he ido compartiéndolos en
+            <a href="http://twiiter.com/JaimeObregon">mi cuenta de Twitter</a>,
+            haciéndome eco de las dificultades y triunfos que he ido encontrando
+            en el camino y escuchando las reacciones. Así me llega que en mayo
+            de 2023 un grupo político
+            <a
+              href="https://www.legebiltzarra.eus/ic2/restAPI/pvgune_descargar/default/df6f909b-2fe6-493e-b3ce-23b0892657ba"
+              >solicita nuevamente al Gobierno Vasco</a
+            >
+            estos datos en forma estructurada. Por la información de que
+            dispongo, esta solicitud tiene su origen en mis tuits y tampoco
+            arrojó resultados positivos del Gobierno Vasco.
           </p>
 
           <p>
