Mejora la adaptatividad

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -210,7 +210,7 @@
             <a href="http://twiiter.com/JaimeObregon">mi cuenta de Twitter</a>,
             haciéndome eco de las dificultades y triunfos que he ido encontrando
             en el camino y escuchando las reacciones. Así me llega que en mayo
-            de 2023 un grupo político
+            de 2023 otro grupo político
             <a
               href="https://www.legebiltzarra.eus/ic2/restAPI/pvgune_descargar/default/df6f909b-2fe6-493e-b3ce-23b0892657ba"
               >solicita nuevamente al Gobierno Vasco</a
