Añade una imagen para las redes sociales

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -24,6 +24,23 @@
     <link rel="icon" type="image/svg+xml" href="/assets/icon.svg" />
     <script type="module" src="/app.js"></script>
 
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@JaimeObregon" />
+    <meta name="twitter:creator" content="@JaimeObregon" />
+    <meta name="twitter:title" content="El Gobierno Vasco y los medios" />
+    <meta
+      name="twitter:description"
+      content="Explora cómo se reparte el dinero público a los medios de comunicación en el País Vasco."
+    />
+    <meta
+      name="twitter:image"
+      content="https://gobiernovasco.marketing/assets/social.jpg"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Captura de pantalla de la herramienta"
+    />
+
     <title>El Gobierno Vasco y los medios</title>
   </head>
   <body>
