Añade una imagen para las redes sociales

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://gobiernovasco.marketing" />
     <meta
       property="og:image"
-      content="https://jaime.gomezobregon.com/assets/poster.jpg"
+      content="https://gobiernovasco.marketing/assets/social.jpg"
     />
 
     <link rel="stylesheet" href="/app.css" />
