Corrige una errata y mejora un texto

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -196,8 +196,9 @@
             de 2018 publicaron
             <a
               href="https://www.argia.eus/argia-astekaria/2623/zortzi-milioi-euroren-banaketa-politikoa"
-              >este reportaje en la revista Argia</a
-            >.
+              >este reportaje</a
+            >
+            en la revista Argia.
           </p>
 
           <p>
@@ -205,16 +206,17 @@
             vasco Josu Estarrona
             <a
               href="https://twitter.com/Josu_Estarrona/status/1579417369658945538"
-              >requirió en el otoño de 2022 al Gobierno Vasco estos datos</a
+              >requirió en el otoño de 2022 al Gobierno Vasco</a
             >
-            en formato abiertos (<i>open data</i>).
+            estos datos en un formato abierto (<i>open data</i>).
           </p>
 
           <p>
-            Mi idea de procesar estas memorias surge en junio de 2022,
+            Mi idea de procesar informáticamente estas memorias surge en junio
+            de 2022,
             <a
               href="https://twitter.com/JaimeObregon/status/1539364161003593729"
-              >durante una charla con periodistas de medios de Hekimen</a
+              >tras una charla con periodistas de Hekimen</a
             >, la asociación de medios de comunicación en euskera. Tras echarle
             un vistazo decidí darlo por imposible, pero en septiembre volví
             sobre el reto y comencé esta herramienta
@@ -227,7 +229,7 @@
             <a href="http://twiiter.com/JaimeObregon">mi cuenta de Twitter</a>,
             haciéndome eco de las dificultades y triunfos que he ido encontrando
             en el camino y escuchando las reacciones. Así me llega que en mayo
-            de 2023 otro grupo político
+            de 2023 otro grupo político del Parlamento Vasco
             <a
               href="https://www.legebiltzarra.eus/ic2/restAPI/pvgune_descargar/default/df6f909b-2fe6-493e-b3ce-23b0892657ba"
               >solicita nuevamente al Gobierno Vasco</a
