--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -49,7 +49,8 @@
       <h1>
         Explora
         <em>cómo&nbsp;se&nbsp;reparte&nbsp;el&nbsp;dinero&nbsp;público</em>
-        a los medios&nbsp;de&nbsp;comunicación en&nbsp;el País&nbsp;Vasco
+        a&nbsp;los&nbsp;medios&nbsp;de&nbsp;comunicación
+        en&nbsp;el&nbsp;País&nbsp;Vasco
       </h1>
 
       <x-separator></x-separator>
