Mejora el tiempo de carga posponiendo la carga de recursos

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -706,7 +706,7 @@
             buena amiga euskaldún 😚.
           </p>
 
-          <video controls preload="metadata">
+          <video controls preload="none" poster="/video/poster.webp">
             <source src="/video/original.mp4" type="video/mp4" />
             <track
               label="Español"
