--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" href="/app.css" />
     <link rel="icon" type="image/svg+xml" href="/assets/icon.svg" />
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png" />
+
     <script type="module" src="/app.js"></script>
 
     <meta name="twitter:card" content="summary_large_image" />
