Deshace la separación entre ETB-1 y ETB-2 porque no me convence

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -465,7 +465,7 @@
           <p>
             Al mismo tiempo, y debido a la naturaleza desestructurada de los
             documentos <abbr>PDF</abbr>, la irregularidad de los datos de
-            partida y la heterogeneidad de los tipos de campañas publicitarioas,
+            partida y la heterogeneidad de los tipos de campañas publicitarias,
             el proceso informático que he desarrollado para extraer los datos
             podría introducir alguna omisión. Por ejemplo, he cuantificado que
             hay 78 campañas que debido a ambas razones podrían no haberse
