Actualiza el proyecto con la flamante memoria de 2023

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -59,9 +59,9 @@
 
       <h2>
         <p>
-          Un análisis de <span id="counter">1351</span> campañas de publicidad y
+          Un análisis de <span id="counter">1674</span> campañas de publicidad y
           comunicación&nbsp;institucional en el período
-          2018&NoBreak;-&NoBreak;2022
+          2018&NoBreak;-&NoBreak;2023
         </p>
       </h2>
 
@@ -361,7 +361,7 @@
             Todos los datos que aquí puedes explorar proceden de las memorias
             oficiales de publicidad institucional que el Gobierno Vasco remite
             al Parlamento Vasco, correspondientes a las anualidades entre 2019 y
-            2022, ambas inclusive.
+            2023, ambas inclusive.
           </p>
 
           <p>
@@ -408,6 +408,14 @@
                 ><cite
                   >Memoria de Publicidad y Comunicación Institucional del
                   Gobierno Vasco. Año 2022.</cite
+                ></a
+              >
+            </li>
+            <li>
+              <a href="/documentos/memorias/2023.pdf"
+                ><cite
+                  >Memoria de Publicidad y Comunicación Institucional del
+                  Gobierno Vasco. Año 2023.</cite
                 ></a
               >
             </li>
