Carga más campañas

--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -65,6 +65,11 @@
         </p>
       </h2>
 
+      <small>
+        NUEVO: ahora también con los datos de las campañas de la Diputación
+        Foral de Gipuzkoa en el período 2014-2019.
+      </small>
+
       <p>
         Por
         <a href="https://twitter.com/JaimeObregon"
